--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -10,7 +10,6 @@
         android:id="@+id/logoView"
         android:layout_width="363dp"
         android:layout_height="46dp"
-        android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="GarageAce Home"
         android:textSize="30sp"
@@ -20,43 +19,60 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/statusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
         android:text="Status"
+        android:textColor="?android:attr/colorForeground"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/readyStatus"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoView" />
 
     <TextView
         android:id="@+id/readyStatus"
         android:layout_width="136dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
         android:gravity="center"
         android:text="Ready to go✅"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/notreadyStatus"
+        app:layout_constraintStart_toEndOf="@+id/statusText"
         app:layout_constraintTop_toBottomOf="@+id/logoView" />
 
     <TextView
-        android:gravity="center"
         android:id="@+id/notreadyStatus"
         android:layout_width="126dp"
         android:layout_height="31dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="52dp"
+        android:gravity="center"
         android:text="Not ready ❌"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/logoView"
-        tools:layout_editor_absoluteX="242dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@mipmap/house_logo"
+        tools:layout_editor_absoluteY="16dp" />
 
 
 </android.support.constraint.ConstraintLayout>
