--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -6,99 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".landingPage">
 
-    <TextView
-        android:id="@+id/logoView"
-        android:layout_width="363dp"
-        android:layout_height="46dp"
-        android:gravity="center"
-        android:text="GarageAce Home"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:typeface="serif"
-        app:fontFamily="sans-serif"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.523"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <TextView
-        android:id="@+id/statusText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
-        android:text="Status"
-        android:textColor="?android:attr/colorForeground"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoView" />
-
-    <TextView
-        android:id="@+id/readyStatus"
-        android:layout_width="136dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
-        android:gravity="center"
-        android:text="Ready to go✅"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/notreadyStatus"
-        app:layout_constraintStart_toEndOf="@+id/statusText"
-        app:layout_constraintTop_toBottomOf="@+id/logoView" />
-
-    <TextView
-        android:id="@+id/notreadyStatus"
-        android:layout_width="126dp"
-        android:layout_height="31dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="52dp"
-        android:gravity="center"
-        android:text="Not ready ❌"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoView" />
 
     <ImageView
+
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/layout_bg"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp"/> <!-- android:visibility="gone" -->
+
+    <Button
+        android:id="@+id/light_button"
+        android:layout_width="229dp"
+        android:layout_height="93dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginTop="544dp"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/house_logo"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:onClick="openGarageDoor"
-        android:id="@+id/button"
-        android:layout_width="128dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="80dp"
-        android:text="Open"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/readyStatus" />
-
-    <Button
-        android:onClick="closeGarageDoor"
-        android:id="@+id/button2"
-        android:layout_width="129dp"
-        android:layout_height="69dp"
+        android:id="@+id/lock_button"
+        android:layout_width="99dp"
+        android:layout_height="92dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="28dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="83dp"
-        android:text="Close"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/readyStatus" />
+        android:layout_marginTop="544dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintEnd_toStartOf="@+id/light_button"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
+    <Button
+        android:id="@+id/toggle_button"
+        android:layout_width="353dp"
+        android:layout_height="323dp"
+        android:layout_marginTop="24dp"
+        android:background="@android:color/transparent"
+        android:onClick="openGarageDoor"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 </android.support.constraint.ConstraintLayout>
